test_regress/t/t_fsmmulti_warn_bad.out
%Warning-FSMMULTI: t/t_fsmmulti_warn_bad.v:41:5: FSM coverage: multiple enum-typed case statements found in the same always block. Only the first candidate will be instrumented.
   41 |     case (state_b)
      |     ^~~~
                   t/t_fsmmulti_warn_bad.v:37:5: ... Location of first supported candidate for 't.state_a'
   37 |     case (state_a)
      |     ^~~~
                   ... For warning description see https://verilator.org/warn/FSMMULTI?v=latest
                   ... Use "/* verilator lint_off FSMMULTI */" and lint_on around source to disable this message.
%Warning-FSMMULTI: t/t_fsmmulti_warn_bad.v:51:5: FSM coverage: multiple enum-typed transition candidates found in the same always block. Only the first candidate will be instrumented.
   51 |     if (state_d == D0) state_d <= D1;
      |     ^~
                   t/t_fsmmulti_warn_bad.v:48:5: ... Location of first supported candidate for 't.state_c'
   48 |     if (state_c == C0) state_c <= C1;
      |     ^~
%Error: Exiting due to
